<resources>
    <string name="app_name">Novels For U</string>
    <string name="server_client_id">YOUR_CLIENT_ID</string>
    <string name="google_server_client_id">1061942773092-e1avfr5clm68vm1spdm66n8d4g92l6st.apps.googleusercontent.com</string>
    <string name="facebook_app_id">3154571154855025</string>
    <string name="fb_login_protocol_scheme">fb3154571154855025</string>
    <string name="common_phone_input_hint">Enter mobile phone number</string>
    <string name="common_phone_input_error">Incorrect cell phone number input</string>
    <string name="common_password_input_error">Please enter the password</string>
    <string name="common_code_input_hint">Enter the verification code</string>
    <string name="common_code_send">Get Code</string>
    <string name="common_code_send_hint">The verification code has been sent, please check it</string>
    <string name="common_step_next">Next step</string>
    <string name="common_step_complete">Finish</string>
    <string name="common_step_commit">submit</string>
    <string name="common_permission_hint">Please grant permission first</string>
    <string name="common_permission_fail">Authorization failed, please grant permission manually</string>
    <string name="common_loading">Loading&#8230;</string>
    <string name="common_confirm">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_year">Year</string>
    <string name="common_month">Month</string>
    <string name="common_day">Day</string>
    <string name="common_hour">Time</string>
    <string name="common_minute">Minute</string>
    <string name="common_second">Second</string>
    <string name="common_network">There is currently no network connection, please check network settings</string>
    <string name="error_missing_appid_rsa_private">Error: Need to configure APPID and RSA_PRIVATE in PayDemoActivity</string>
    <string name="pay_success">payment successful:</string>
    <string name="pay_failed">Payment failed:</string>
    <string name="http_loading">Loading&#8230;</string>
    <string name="http_unknown_error">Request error, unknown error</string>
    <string name="http_account_error">Account is abnormal, please log in again</string>
    <string name="http_data_explain_error">Data parsing is abnormal, please wait</string>
    <string name="http_server_out_time">Server request timed out, please try again later</string>
    <string name="http_network_error">Request failed, please check network settings</string>
    <string name="http_server_error">Server connection is abnormal, please try again later</string>
    <string name="http_request_cancel">The request was interrupted, please try again</string>
    <string name="loading">Loading</string>
    <string name="setting_clear_cache_ing">Clearing</string>
    <string name="setting_clear_cache">Cache cleared</string>
    <string name="login_auth_ing">Authorizing login</string>
    <string name="login_auth_success">login successful</string>
    <string name="login_auth_failure">Authorization failed</string>
    <string name="login_auth_cancle">Authorization cancellation</string>
    <string name="refresh_header_pulling">Scroll down to refresh</string>
    <string name="refresh_header_refreshing">Refreshing</string>
    <string name="refresh_header_loading">loading</string>
    <string name="refresh_header_release">Refresh immediately after release</string>
    <string name="refresh_header_finish">Refresh complete</string>
    <string name="refresh_header_failed">Refresh failed</string>
    <string name="refresh_header_update">M-d HH:mm</string>
    <string name="refresh_footer_pulling">Scroll up to load more</string>
    <string name="refresh_footer_release">Release and load immediately</string>
    <string name="refresh_footer_loading">loading</string>
    <string name="refresh_footer_refreshing">Refreshing</string>
    <string name="refresh_footer_finish">Loading completed</string>
    <string name="refresh_footer_failed">Failed to load</string>
    <string name="refresh_footer_nothing">No more</string>
    <string name="load_failure">Network request failed</string>
    <string name="load_failure_2">Please check your network connection and try again~</string>
    <string name="no_data">No more</string>
    <string name="reload">Retry</string>
    <string name="hint_layout_no_data">Empty</string>
    <string name="hint_layout_error_request">There was an error in the request, click to try again</string>
    <string name="hint_layout_error_network">Network error, click to try again</string>
    <string name="address_title">please select the region</string>
    <string name="address_hint">please choose</string>
    <string name="date_title">Please select a date</string>
    <string name="time_title">Please choose a time</string>
    <string name="update_title">New version found</string>
    <string name="update_content">update content</string>
    <string name="update_no">Talk about it next time</string>
    <string name="update_yes">update immediately</string>
    <string name="update_background">Backend Update</string>
    <string name="update_permission_hint">You must first grant permission to download the update normally</string>
    <string name="update_status_running">downloading %d%%</string>
    <string name="update_status_successful">install now</string>
    <string name="update_status_failed">download failed</string>
    <string name="update_no_update">Currently the latest version</string>
    <string name="share_title">Share on moments&#8230;</string>
    <string name="share_platform_wechat">WeChat friends</string>
    <string name="share_platform_moment">Circle of friends</string>
    <string name="share_platform_qq">instagram</string>
    <string name="share_platform_qzone">Facebook</string>
    <string name="share_platform_weibo">Weibo</string>
    <string name="share_platform_link">Copy link</string>
    <string name="share_platform_copy_hint">Copied to clipboard</string>
    <string name="pay_title">Please enter payment password</string>
    <string name="select_min_hint">At least %d items must be selected</string>
    <string name="select_max_hint">You can only select at most %d items</string>
    <string name="home_exit_hint">Press again to exit</string>
    <string name="home_nav_shelve">Library</string>
    <string name="home_nav_stack">Discover</string>
    <string name="home_nav_genres">Genres</string>
    <string name="home_nav_weal">Welfare</string>
    <string name="home_nav_classification">Discover</string>
    <string name="home_nav_mine">Me</string>
    <string name="login_register">register</string>
    <string name="login_forget">forget password?</string>
    <string name="login_text">Log in</string>
    <string name="login_other">Other login methods</string>
    <string name="register_title">register</string>
    <string name="register_hint">The phone number is only used to log in and protect account security</string>
    <string name="register_password_hint1">Set 6&#8211; 18-digit login password</string>
    <string name="register_password_hint2">Please enter the password again</string>
    <string name="register_password_input_error">The two password entries are inconsistent, please re-enter</string>
    <string name="setting_title">set up</string>
    <string name="setting_language">Language switch</string>
    <string name="setting_language_simple">Chinese,Simplified</string>
    <string name="setting_language_complex">Chinese,Traditional</string>
    <string name="setting_update">Check for updates</string>
    <string name="setting_cache">Empty the cache</string>
    <string name="setting_auto">auto login</string>
    <string name="setting_agreement">Privacy agreement</string>
    <string name="setting_about">about us</string>
    <string name="setting_exit">Log out</string>
    <string name="about_title">about us</string>
    <string name="about_author"><font color="#85b84f">Android</font> mine</string>
    <string name="about_copyright">Copyright © 2018 &#8211; 2020</string>
    <string name="password_forget_title">forget the password</string>
    <string name="password_reset_title">Setting login password</string>
    <string name="password_reset_phone_hint1">Set 6&#8211; 18-digit login password</string>
    <string name="password_reset_phone_hint2">Re-enter the password</string>
    <string name="password_reset_input_error">The two password entries are inconsistent, please re-enter</string>
    <string name="password_reset_success">Password reset successfully</string>
    <string name="phone_verify_title">Phone number verification</string>
    <string name="phone_verify_current_phone">Current phone number：%s</string>
    <string name="phone_reset_title">Modify mobile phone number</string>
    <string name="phone_reset_change_hint">Bind successfully, please use the new cell phone number to log in next time</string>
    <string name="phone_reset_commit">Bind now</string>
    <string name="phone_reset_commit_succeed">The binding is successful, please use the new phone number to log in next time you log in录</string>
    <string name="personal_data_title">Profile</string>
    <string name="personal_data_head">Profile Photo</string>
    <string name="personal_data_id">User ID</string>
    <string name="personal_data_name">Nick name</string>
    <string name="personal_data_name_hint">Set nickname</string>
    <string name="personal_data_address">Region</string>
    <string name="personal_data_address_hint">please choose</string>
    <string name="personal_data_phone">mobile phone number</string>
    <string name="personal_data_phone_hint">Bind now</string>
    <string name="web_title">Page loading&#8230;</string>
    <string name="crash_error_hint">An unexpected error occurred \n Sorry for the inconvenience</string>
    <string name="crash_error_restart">Restart</string>
    <string name="crash_error_log">View log</string>
    <string name="crash_error_details">Error details</string>
    <string name="crash_error_info">Error message</string>
    <string name="crash_copy_log">Copy log</string>
    <string name="crash_close">closure</string>
    <string name="photo_title">Picture selection</string>
    <string name="photo_all">All pictures</string>
    <string name="photo_total">% D total</string>
    <string name="photo_max_hint">Only %d pictures can be selected this time</string>
    <string name="photo_launch_fail">Unable to start camera</string>
    <string name="photo_picture_error">Picture error</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_select_file">Import books</string>
    <string name="action_search_file">Search file</string>
    <string name="action_add_bookmark">Add bookmark</string>
    <string name="action_read_book">read</string>
    <string name="open_drawer">Turn on</string>
    <string name="setting_system">system</string>
    <string name="setting_dark">dark</string>
    <string name="setting_bright">Bright</string>
    <string name="setting_default">default</string>
    <string name="font_default">system default</string>
    <string name="font_qihei">Yi Chuang Qi Hei</string>
    <string name="font_fzxinghei">Line black</string>
    <string name="font_fzkatong">Cartoon</string>
    <string name="font_bysong">Song Ti</string>
    <string name="page_mode_simulation">Turn page</string>
    <string name="page_mode_cover">cover</string>
    <string name="page_mode_slide">Panning</string>
    <string name="page_mode_none">None</string>
    <string name="ad_timer">Advertising is to better support genuine</string>
    <string name="ad_timer_tip">You need to wait 15 seconds to read the next chapter</string>
    <string name="look_videoad">Watch the video to avoid 30 minutes of advertising</string>
</resources>