<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ad_timer" />

    <LinearLayout
        android:id="@+id/lin_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/tv_tip"
        android:layout_below="@+id/lin_ad"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/ad_timer_tip" />

    <TextView
        android:id="@+id/tv_timer"
        android:layout_below="@+id/tv_tip"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_add_videoad"
        android:layout_below="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:text="@string/look_videoad"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:drawablePadding="@dimen/dp_4"
        android:layout_height="wrap_content"
        app:drawableRightCompat="@mipmap/mine_more" />
</RelativeLayout>