<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:id="@+id/layout"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="25dp"
    android:paddingBottom="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setting_dark"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/sb_brightness"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:max="100"></SeekBar>

        <TextView
            android:id="@+id/tv_bright"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setting_bright"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_xitong"
            style="@style/setting_dialog_button"
            android:layout_marginLeft="10dp"
            android:visibility="gone"
            android:text="@string/setting_system"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="字体"
            android:textColor="#ff303133"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:id="@+id/tv_subtract"
            android:layout_height="36dp"
            android:gravity="center"
            android:background="@drawable/bg_conner_alpha"
            android:layout_marginLeft="22dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A"
                android:textColor="#ff303133"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:layout_toRightOf="@id/a"
                android:textColor="#ff303133"
                android:textSize="11sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tv_add"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:background="@drawable/bg_conner_alpha"
            android:layout_weight="1">

            <TextView
                android:id="@+id/a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A"
                android:textColor="#ff303133"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/a21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_toRightOf="@id/a2"
                android:textColor="#ff303133"
                android:textSize="11sp" />
        </RelativeLayout>


        <TextView
            android:id="@+id/tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:gravity="center"
            android:visibility="gone"
            android:text="64"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_size_default"
            style="@style/setting_dialog_button"
            android:layout_marginLeft="20dp"
            android:visibility="gone"
            android:text="@string/setting_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_default"
            style="@style/setting_dialog_button"
            android:layout_weight="1"
            android:text="@string/font_default"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_qihei"
            style="@style/setting_dialog_button"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/font_qihei"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_fzxinghei"
            style="@style/setting_dialog_button"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/font_fzxinghei"
            android:textSize="14sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_fzkatong"
            style="@style/setting_dialog_button"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/font_fzkatong"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_bysong"
            style="@style/setting_dialog_button"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/font_bysong"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="26dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="背景"
            android:textColor="#ff303133"
            android:textSize="12sp" />

        <cc.ixcc.noveltwo.treader.view.CircleImageView
            android:id="@+id/iv_bg_default"
            style="@style/setting_dialog_iv"
            android:layout_marginLeft="22dp"
            android:layout_weight="1"
            android:src="@color/read_bg_default" />

        <cc.ixcc.noveltwo.treader.view.CircleImageView
            android:id="@+id/iv_bg_1"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_bg_1" />

        <cc.ixcc.noveltwo.treader.view.CircleImageView
            android:id="@+id/iv_bg_2"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_bg_2" />

        <cc.ixcc.noveltwo.treader.view.CircleImageView
            android:id="@+id/iv_bg_3"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_bg_3" />

        <cc.ixcc.noveltwo.treader.view.CircleImageView
            android:id="@+id/iv_bg_4"
            style="@style/setting_dialog_iv"
            android:layout_weight="1"
            android:src="@color/read_bg_4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="28dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="翻页"
            android:textColor="#ff303133"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_simulation"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginLeft="22dp"
            android:layout_weight="1"
            android:background="@drawable/bg_conner_page"
            android:gravity="center"
            android:text="@string/page_mode_simulation"
            android:visibility="gone"
            android:textColor="#ff303133"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tv_cover"
            style="@style/setting_dialog_button"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textSize="12dp"
            android:textColor="#ff303133"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="32dp"
            android:background="@drawable/bg_conner_page"
            android:text="@string/page_mode_cover" />
        <TextView
            android:id="@+id/tv_slide"
            style="@style/setting_dialog_button"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textSize="12dp"
            android:layout_height="32dp"
            android:textColor="#ff303133"
            android:layout_width="0dp"
            android:gravity="center"
            android:background="@drawable/bg_conner_page"
            android:text="@string/page_mode_slide" />
        <TextView
            android:id="@+id/tv_none"
            style="@style/setting_dialog_button"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textSize="12dp"
            android:layout_height="32dp"
            android:layout_width="0dp"
            android:gravity="center"
            android:textColor="#ff303133"
            android:background="@drawable/bg_conner_page"
            android:text="@string/page_mode_none" />
<!--        <TextView-->
<!--            android:id="@+id/tv_none"-->
<!--            style="@style/setting_dialog_button"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:textSize="12dp"-->
<!--            android:layout_height="32dp"-->
<!--            android:layout_width="0dp"-->
<!--            android:gravity="center"-->
<!--            android:textColor="#ff303133"-->
<!--            android:background="@drawable/bg_conner_page"-->
<!--            android:text="@string/page_mode_updown" />-->
    </LinearLayout>
</LinearLayout>